--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -264,6 +264,8 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                         <div form-radio text="显示在日历" ng-model="param.show_in_calendar" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
+                        <div form-radio text="显示用户购买记录" ng-model="param.show_user_list" default="2"
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
                         <!--<div form-radio text="绑定手机号" ng-model="param.enable_bind_mobile" default="1"-->
                              <!--source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>-->
                         <div form-input text="排序" ng-model="param.order_by" type="number" min="0"></div>
